rust/kcl-lib/src/frontend/trim/snapshots/kcl_lib__frontend__trim__tests__test_trim_line2_left_side.snap
---
source: kcl-lib/src/frontend/trim/tests.rs
expression: "result_normalized"
---
sketch(on = YZ) {
  line1 = line(start = [var 0mm, var 5mm], end = [var 0mm, var -5mm])
  line2 = line(start = [var 5mm, var 0mm], end = [var 0mm, var 0mm])
  coincident([line2.end, line1])
}
