rust/kcl-lib/src/frontend/trim/snapshots/kcl_lib__frontend__trim__tests__test_trim_line_with_midpoint_coincident_arc_endpoint.snap
---
source: kcl-lib/src/frontend/trim/tests.rs
expression: result_normalized
---
sketch001 = sketch(on = YZ) {
  line6 = line(start = [var 0.32mm, var 3.430649723520579mm], end = [var 1.87mm, var 3.430649723520579mm])
  line7 = line(start = [var 1.87mm, var 3.430649723520579mm], end = [var 1.87mm, var 2.2199440976903637mm])
  line8 = line(
    start = [var 1.87mm, var 2.2199440976903637mm],
    end = [
      var 0.32863811384691577mm,
      var 2.2199440976903637mm
    ],
  )
  line9 = line(
    start = [
      var 0.32863811384691577mm,
      var 2.2199440976903637mm
    ],
    end = [
      var 0.32863811384691577mm,
      var 2.900159306026995mm
    ],
  )
  coincident([line6.end, line7.start])
  coincident([line7.end, line8.start])
  coincident([line8.end, line9.start])
  parallel([line7, line9])
  parallel([line8, line6])
  perpendicular([line6, line7])
  horizontal(line8)
  arc2 = arc(
    start = [
      var 0.8785076447182822mm,
      var 3.430649723520579mm
    ],
    end = [
      var 0.32863811384691594mm,
      var 2.869062119975061mm
    ],
    center = [
      var 0.8744706336940457mm,
      var 2.884610713005489mm
    ],
  )
  coincident([arc2.end, line9])
  coincident([arc2.start, line6])
  coincident([line9.end, arc2])
}
