rust/kcl-lib/src/frontend/trim/snapshots/kcl_lib__frontend__trim__tests__test_trim_should_work_with_different_units_2.snap
---
source: kcl-lib/src/frontend/trim/tests.rs
expression: "result_normalized"
---
@settings(defaultLengthUnit = cm)

sketch(on = YZ) {
  line1 = line(start = [var -1cm, var 5cm], end = [var -1cm, var -5cm])
  line2 = line(start = [var -1cm, var 0cm], end = [var 5cm, var 0cm])
  coincident([line2.start, line1])
}
