rust/kcl-lib/src/frontend/trim/snapshots/kcl_lib__frontend__trim__tests__test_trimming_arcs_preserve_distance_constraints.snap
---
source: kcl-lib/src/frontend/trim/tests.rs
expression: result_normalized
---
sketch(on = YZ) {
  arc1 = arc(
    start = [
      var -3.8860969244230024mm,
      var 1.8520187744368846mm
    ],
    end = [
      var -5.308308580730114mm,
      var -1.3400580745292316mm
    ],
    center = [
      var -0.6519330338942325mm,
      var -1.5018120988723436mm
    ],
  )
  line1 = line(start = [var -4.72mm, var 3.54mm], end = [var -2.24mm, var -1.48mm])
  line2 = line(
    start = [
      var 2.2696890091612003mm,
      var -4.039729480808292mm
    ],
    end = [var 4.65mm, var -1.26mm],
  )
  distance([arc1.center, line2.start]) == 3.87mm
  line3 = line(
    start = [var -5.61mm, var 5.38mm],
    end = [
      var -0.8953530369539768mm,
      var 5.486595115900792mm
    ],
  )
  line4 = line(
    start = [var 1.03mm, var 5.53mm],
    end = [
      var 6.152864834537005mm,
      var 3.1094470091159048mm
    ],
  )
  line5 = line(
    start = [var -1.05mm, var 6.42mm],
    end = [
      var -0.8953530369539768mm,
      var 5.486595115900792mm
    ],
  )
  distance([line4.end, line3.start]) == 11.98mm
  coincident([line5.end, line3.end])
  coincident([arc1.start, line1])
}
